<resources>
  <string name="app_name">Hermes Mobile</string>
  <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
  <string name="expo_runtime_version">0.1.0</string>
</resources>